Revert "Update update_schedule.yml"
This reverts commit ea838a3b24519442aa2cb4bdb56a8069f257db21.

--- a/.github/workflows/update_schedule.yml
+++ b/.github/workflows/update_schedule.yml
@@ -27,7 +27,7 @@ jobs:
         pip install -r utils/requirements.txt
 
     - name: Criar arquivo de credenciais
-      run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > utils/service_account.json
+      run: echo "${{ secrets.SERVICE_ACCOUNT_JSON }}" > utils/service_account.json
       
     - name: Executar script para exportar CSV
       run: python utils/exportaCSV.py
